--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
                         </goals>
                     </execution>
                     <execution>
-                        <id>check</id>
+                        <id>check-jacoco</id>
                         <phase>verify</phase>
                         <goals>
                             <goal>check</goal>
@@ -73,6 +73,27 @@
                         </rule>
                     </rules>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>4.1.3</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.github.spotbugs</groupId>
+                        <artifactId>spotbugs</artifactId>
+                        <version>4.2.0</version>
+                    </dependency>
+                </dependencies>
+                <executions>
+                    <execution>
+                        <id>check-spotbugs</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
